[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Inventory/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Images/User interface/inventory/crafting/crafting-tab.png" type="Texture" id=3]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Exit/Exit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button.png" type="Texture" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Crafting/Crafting.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Options/Options.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button-pressed.png" type="Texture" id=9]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=36]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Collections/Collections.tscn" type="PackedScene" id=37]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Skills/Skills.tscn" type="PackedScene" id=39]
[ext_resource path="res://InventoryLogic/ItemNameBox.tscn" type="PackedScene" id=42]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = -640.0
script = ExtResource( 1 )

[node name="Trash" parent="." instance=ExtResource( 8 )]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 426.0
margin_bottom = 240.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="ItemNameBox" parent="." instance=ExtResource( 42 )]
visible = false
position = Vector2( -508, 3 )

[node name="TabButtons" type="HBoxContainer" parent="."]
margin_left = 322.0
margin_top = 118.0
margin_right = 908.0
margin_bottom = 154.0
custom_constants/separation = 14

[node name="Inventory" type="Button" parent="TabButtons"]
margin_right = 106.0
margin_bottom = 36.0
rect_min_size = Vector2( 106, 36 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Skills" type="Button" parent="TabButtons"]
margin_left = 120.0
margin_right = 226.0
margin_bottom = 36.0
rect_min_size = Vector2( 106, 36 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Crafting" type="Button" parent="TabButtons"]
margin_left = 240.0
margin_right = 346.0
margin_bottom = 36.0
rect_min_size = Vector2( 106, 36 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Collections" type="Button" parent="TabButtons"]
margin_left = 360.0
margin_right = 466.0
margin_bottom = 36.0
rect_min_size = Vector2( 106, 36 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Options" type="Button" parent="TabButtons"]
margin_left = 480.0
margin_right = 586.0
margin_bottom = 36.0
rect_min_size = Vector2( 106, 36 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ItemDescription" parent="." instance=ExtResource( 36 )]
visible = false

[node name="Collections" parent="." instance=ExtResource( 37 )]
visible = false
margin_left = -514.0
margin_right = -474.0

[node name="Skills" parent="." instance=ExtResource( 39 )]
visible = false

[node name="Exit" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 229.0
margin_bottom = 229.0

[node name="Tween" type="Tween" parent="."]

[node name="OptionsMenu" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -380.0
margin_top = 184.0
margin_right = 203.0
margin_bottom = 607.0

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="ExitBtn" type="TextureButton" parent="."]
margin_left = 918.0
margin_top = 114.0
margin_right = 932.0
margin_bottom = 128.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
expand = true

[node name="Inventory" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Crafting" parent="." instance=ExtResource( 6 )]

[connection signal="mouse_entered" from="TabButtons/Inventory" to="." method="_on_Inventory_mouse_entered"]
[connection signal="mouse_exited" from="TabButtons/Inventory" to="." method="_on_Inventory_mouse_exited"]
[connection signal="pressed" from="TabButtons/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="mouse_entered" from="TabButtons/Skills" to="." method="_on_Skills_mouse_entered"]
[connection signal="mouse_exited" from="TabButtons/Skills" to="." method="_on_Skills_mouse_exited"]
[connection signal="pressed" from="TabButtons/Skills" to="." method="_on_Skills_pressed"]
[connection signal="mouse_entered" from="TabButtons/Crafting" to="." method="_on_Crafting_mouse_entered"]
[connection signal="mouse_exited" from="TabButtons/Crafting" to="." method="_on_Crafting_mouse_exited"]
[connection signal="pressed" from="TabButtons/Crafting" to="." method="_on_Crafting_pressed"]
[connection signal="mouse_entered" from="TabButtons/Collections" to="." method="_on_Collections_mouse_entered"]
[connection signal="mouse_exited" from="TabButtons/Collections" to="." method="_on_Collections_mouse_exited"]
[connection signal="pressed" from="TabButtons/Collections" to="." method="_on_Collections_pressed"]
[connection signal="mouse_entered" from="TabButtons/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="TabButtons/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="pressed" from="TabButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
